docs: finished docs
